...

    private static func toggleSidebarCommand(title: String?) -> UIKeyCommand {
        KeyboardShortcut.toggleSidebar.makeKeyCommand(action: #selector(toggleSidebarFromKeyboard(_:)), title: title)
    }

    private static func toggleSidebarTitle(for stack: RootViewControllerStack) -> String {
        stack.isSidebarVisible ? "Hide Sidebar" : "Show Sidebar"
    }

    private static var showKeyboardShortcutsCommand: UIKeyCommand {
        KeyboardShortcut.showKeyboardShortcuts.makeKeyCommand(action: #selector(showKeyboardShortcuts(_:)))
    }

...
